--- a/index.qmd
+++ b/index.qmd
@@ -6,7 +6,7 @@ main-photo-square: /files/profiles/headshot-square.jpg
 title-block-banner: false
 ---
 
-:::::: grid
+::::: grid
 ::: {.g-col-12 .g-col-md-4}
 ```{=html}
 <div class="grid" style="--bs-columns: 5; row-gap: 0;">
@@ -32,14 +32,8 @@ During my PhD studies, I helped to found the [AMES Research Center](https://www.
 
 I wear a lot of hats. I developed our conflict management training program, training over 150 individuals in constructive conflict resolution. I also act as a project manager, data scientist, and consultant. I’ve given [23 public presentations](talks/index.qmd), published [8 articles](research/index.qmd), and written [3 reports for state agencies.](research/index.qmd)\
 \
-I’ve had a nonlinear [career path.](cv/index.qmd) Before my PhD, I worked a few years in HR and Business Development. But I developed a temporary disability, overcame it, then took time to travel, volunteer, intern, and go to grad school. I’ve been driven by learning and growing into a person who can have an impact .\
-:::
+I’ve had a nonlinear [career path.](cv/index.qmd) Before my PhD, I worked a few years in HR and Business Development. But I developed a temporary disability, overcame it, then took time to travel, volunteer, intern, and go to grad school. I’ve been driven by learning and growing into a person who can have an impact.\
 
-::: {.g-col-12 .g-col-md-12}
-### Site Info
-
--   I took inspiration for this site from Andrew Heiss' [excellent website and blog](https://www.andrewheiss.com).
--   I used [Quarto](https://quarto.org/docs/websites/) to create the site.
--   The color scheme for the site comes from the [Lakota palette](https://www.metmuseum.org/art/collection/search/751512) in the [MetBrewer](https://github.com/BlakeRMills/MetBrewer) library for R and Python. The palettes are Inspired by displays at the [Metropolitan Museum of Art in New York](https://www.metmuseum.org).
+My work has been published in Psychology journals such as *Aggression and Violent Behavior*, *Traumatology,* and *Military Psychology,* as well as community-focused journals like the *Journal of Community Engagement and Scholarship*.
 :::
-::::::
+:::::
