updated degrees on home page

--- a/index.qmd
+++ b/index.qmd
@@ -30,7 +30,7 @@ I am a psychologist, data scientist, and researcher in conflict resolution.
 
 My current research is dedicated to advancing the psychological science and practice of conflict resolution to address interconnected crises facing American communities in the 21st century.
 
-I have a doctoral degree in International Conflict Management — an interdisciplinary study of war, peace, and violence, with an attention to culture and global affairs.
+I have a doctoral degree in International Conflict Management — an interdisciplinary study of war, peace, and violence, with an attention to culture and global affairs. I also hold master's degrees in psychology and international relations, and an bachelor's degree in political science.
 
 During my PhD studies, I helped to found the [AMES Research Center](https://www.kennesaw.edu/research/centers-facilities/ames-center/index.php). We use analytics and research-based programs to improve the workplace well-being of military veterans, police, firefighters, and medics. In 3 years, we grew to a staff of 20 with a yearly revenue of \$1.9M in contracts and grants. We have trained 1.6K employees and conducted assessments for 38 client organizations and 13.5K personnel.
 
